<resources>
    <string name="app_name">AirRide</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Log In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="vehicle">Vehicle</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="car_data">Car Data</string>
    <string name="registration_and_licence">Registration and Licence</string>
    <string name="car_model">Car Model</string>
    <string name="registration">Registration</string>
    <string name="accept_pets">Accept Pets</string>
    <string name="accept_babies">Accept Babies</string>
    <string name="confirm">Confirm</string>
    <string name="id_number">ID Number</string>
    <string name="vehicle_registration_id">Vehicle Registration ID</string>
    <string name="main_activity">Main</string>
    <string name="inbox_activity">Inbox</string>
    <string name="account_activitY">Account</string>
    <string name="favorites_activity">Favorites</string>
    <string name="max_people">Max People Capacity</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="reports_activity">Reports</string>
    <string name="logout">Log out</string>
    <string name="chat_hint">Message..</string>
    <string name="login_error">The username or password you entered is incorrect</string>
    <string name="ride_channel">Ride notification channel</string>
    <string name="new_ride_notification">RIDE_NOTIFICATION</string>
    <string name="where_to">Where To</string>
    <string name="go_now">Go Now</string>
    <string name="pick_time">Pick Time</string>
    <string name="current_location">Current Location</string>
    <string name="time">Time</string>
    <string name="pets">Pets</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear">Clear</string>
    <string name="no_pets">No Pets</string>
    <string name="babies">Babies</string>
    <string name="no_babies">No Babies</string>
    <string name="air_ride">AirRide</string>
    <string name="distance">Distance:</string>
    <string name="price">Price:</string>
    <string-array name="carTypes">
        <item>Standard</item>
        <item>Luxury</item>
        <item>Van</item>
    </string-array>
    <string name="driver_ride_dialog_title">Accept ride?</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_decline">Decline</string>
    <string name="start_ride">Start ride</string>
    <string name="end_ride">End ride</string>
    <string name="panic">PANIC</string>
    <string name="date_picker">Pick a date</string>
    <string name="add_people">Add People</string>
    <string name="add">Add</string>
    <string name="searching_for_driver">Searching For Driver</string>
    <string name="cancel">Cancel</string>
    <string name="change">Update personal info</string>
    <string name="save">Save changes</string>
    <string name="enter_email">Enter linked email address</string>
    <string name="code">Code</string>
    <string name="new_password">New password</string>
    <string name="driver_review">Driver review</string>
    <string name="vehicle_review">Vehicle review</string>
    <string name="comment">Comment…</string>
</resources>