<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/id_card"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/id_number"
        android:drawablePadding="7dp"
        android:drawableTint="?attr/colorOnBackground"/>

    <EditText
        android:id="@+id/idNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/id_card"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/vehicle_registration_id"
        android:drawablePadding="7dp"
        android:drawableTint="?attr/colorOnBackground"/>

    <EditText
        android:id="@+id/vehicleRegistrationIdNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmDriverIds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:padding="15dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        app:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"/>

</LinearLayout>