<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="3dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regFormName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="text"
                android:singleLine="true"
                android:visibility="visible"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="15dp"
                android:hint="@string/name"
                android:textColorHint="?attr/colorOnSecondary"
                android:drawableStart="@drawable/ic_round_person_24"
                android:drawablePadding="6dp">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="3dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regFormLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="text"
                android:singleLine="true"
                android:visibility="visible"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="5dp"
                android:hint="@string/last_name"
                android:textColorHint="?attr/colorOnSecondary"
                android:drawableStart="@drawable/ic_round_person_24"
                android:drawablePadding="6dp">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regFormEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/e_mail"
            android:textColorHint="?attr/colorOnSecondary"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="6dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regFormAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:singleLine="true"
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/address"
            android:textColorHint="?attr/colorOnSecondary"
            android:drawableStart="@drawable/ic_baseline_home_24"
            android:drawablePadding="6dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regFormPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="phone"
            android:singleLine="true"
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:textColorHint="?attr/colorOnSecondary"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="6dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regFormPass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:singleLine="true"
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="?attr/colorOnSecondary"
            android:drawableStart="@drawable/ic_round_lock_24"
            android:drawablePadding="6dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regFormPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:singleLine="true"
            android:visibility="visible"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:textColorHint="?attr/colorOnSecondary"
            android:drawableStart="@drawable/ic_round_lock_24"
            android:drawablePadding="6dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/regFormCreateAccButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        app:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:textSize="18sp"/>
</LinearLayout>